Added camera icons to the buttons

--- a/PhotoDrop/Drop.storyboard
+++ b/PhotoDrop/Drop.storyboard
@@ -23,45 +23,44 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SAP-oG-9F0">
-                                <rect key="frame" x="0.0" y="20" width="375" height="566"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Glr-hA-0P6">
-                                        <rect key="frame" x="8" y="8" width="34" height="30"/>
-                                        <state key="normal" title="Back"/>
-                                        <connections>
-                                            <action selector="backButtonTapped:" destination="sav-ME-bra" eventType="touchUpInside" id="tHR-1x-aah"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
+                                <rect key="frame" x="0.0" y="53" width="375" height="470"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstItem="Glr-hA-0P6" firstAttribute="top" secondItem="SAP-oG-9F0" secondAttribute="topMargin" id="cI0-mV-nEt"/>
-                                    <constraint firstItem="Glr-hA-0P6" firstAttribute="leading" secondItem="SAP-oG-9F0" secondAttribute="leadingMargin" id="ry2-fH-NT9"/>
-                                </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lZv-X8-pl4">
-                                <rect key="frame" x="149" y="617" width="77" height="30"/>
-                                <state key="normal" title="Take Photo"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YJX-pw-A2s">
+                                <rect key="frame" x="67" y="269" width="240" height="128"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Glr-hA-0P6">
+                                <rect key="frame" x="16" y="20" width="34" height="30"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <action selector="backButtonTapped:" destination="sav-ME-bra" eventType="touchUpInside" id="tHR-1x-aah"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lZv-X8-pl4">
+                                <rect key="frame" x="144" y="557" width="90" height="90"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="CHG-n4-PZP"/>
+                                </constraints>
+                                <state key="normal" title="Take Photo" image="Oval 2"/>
                                 <connections>
                                     <action selector="takePhotoButtonTapped:" destination="sav-ME-bra" eventType="touchUpInside" id="nIG-SX-RmL"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YJX-pw-A2s">
-                                <rect key="frame" x="67" y="269" width="240" height="128"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="SAP-oG-9F0" secondAttribute="trailing" id="DdM-8e-fDA"/>
-                            <constraint firstItem="lZv-X8-pl4" firstAttribute="top" secondItem="SAP-oG-9F0" secondAttribute="bottom" constant="31" id="E1j-pb-KdQ"/>
-                            <constraint firstItem="YJX-pw-A2s" firstAttribute="centerX" secondItem="lZv-X8-pl4" secondAttribute="centerX" id="GuV-v3-Npj"/>
-                            <constraint firstItem="YJX-pw-A2s" firstAttribute="leading" secondItem="s2D-MQ-qck" secondAttribute="leadingMargin" constant="51" id="TMs-pg-uhp"/>
-                            <constraint firstAttribute="bottom" secondItem="lZv-X8-pl4" secondAttribute="bottom" constant="20" symbolic="YES" id="WeR-Eu-gId"/>
-                            <constraint firstItem="YJX-pw-A2s" firstAttribute="top" secondItem="oKe-XZ-mhv" secondAttribute="bottom" constant="249" id="Z6i-DA-9Eq"/>
-                            <constraint firstItem="SAP-oG-9F0" firstAttribute="centerX" secondItem="YJX-pw-A2s" secondAttribute="centerX" id="aSP-r7-ozO"/>
-                            <constraint firstItem="SAP-oG-9F0" firstAttribute="leading" secondItem="s2D-MQ-qck" secondAttribute="leading" id="eHL-NM-ofL"/>
-                            <constraint firstItem="YJX-pw-A2s" firstAttribute="centerY" secondItem="s2D-MQ-qck" secondAttribute="centerY" id="jpq-zl-kPk"/>
-                            <constraint firstItem="SAP-oG-9F0" firstAttribute="top" secondItem="oKe-XZ-mhv" secondAttribute="bottom" id="kr1-5r-z3n"/>
+                            <constraint firstItem="SAP-oG-9F0" firstAttribute="leading" secondItem="s2D-MQ-qck" secondAttribute="leading" id="0Yv-uI-Wwb"/>
+                            <constraint firstItem="YJX-pw-A2s" firstAttribute="leading" secondItem="s2D-MQ-qck" secondAttribute="leadingMargin" constant="51" id="1xx-ZV-WbN"/>
+                            <constraint firstItem="SAP-oG-9F0" firstAttribute="centerX" secondItem="YJX-pw-A2s" secondAttribute="centerX" id="6RE-2C-aLo"/>
+                            <constraint firstItem="Glr-hA-0P6" firstAttribute="top" secondItem="oKe-XZ-mhv" secondAttribute="bottom" id="ELo-w9-aEA"/>
+                            <constraint firstItem="Glr-hA-0P6" firstAttribute="leading" secondItem="s2D-MQ-qck" secondAttribute="leadingMargin" id="Ht7-X3-rcf"/>
+                            <constraint firstAttribute="trailing" secondItem="SAP-oG-9F0" secondAttribute="trailing" id="IQo-2M-x93"/>
+                            <constraint firstItem="lZv-X8-pl4" firstAttribute="leading" secondItem="s2D-MQ-qck" secondAttribute="leading" constant="144" id="RJ5-MH-KD3"/>
+                            <constraint firstAttribute="bottom" secondItem="lZv-X8-pl4" secondAttribute="bottom" constant="20" symbolic="YES" id="W3s-Ap-DoM"/>
+                            <constraint firstItem="lZv-X8-pl4" firstAttribute="top" secondItem="SAP-oG-9F0" secondAttribute="bottom" constant="34" id="XAh-C2-XqB"/>
+                            <constraint firstItem="YJX-pw-A2s" firstAttribute="centerY" secondItem="s2D-MQ-qck" secondAttribute="centerY" id="YW8-HF-PCE"/>
+                            <constraint firstItem="SAP-oG-9F0" firstAttribute="top" secondItem="Glr-hA-0P6" secondAttribute="bottom" constant="3" id="ej5-bz-H1W"/>
+                            <constraint firstItem="YJX-pw-A2s" firstAttribute="top" secondItem="oKe-XZ-mhv" secondAttribute="bottom" constant="249" id="lR4-Us-uVX"/>
                         </constraints>
                     </view>
                     <connections>
@@ -72,7 +71,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fJZ-US-Dwn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6" y="122"/>
+            <point key="canvasLocation" x="5.5999999999999996" y="121.88905547226388"/>
         </scene>
         <!--DropPreview-->
         <scene sceneID="mdd-mN-AqC">
@@ -83,4 +82,7 @@
             <point key="canvasLocation" x="537" y="314"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Oval 2" width="89" height="90"/>
+    </resources>
 </document>
