--- a/PhotoDrop/Photo.storyboard
+++ b/PhotoDrop/Photo.storyboard
@@ -30,7 +30,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.53609974540000005" green="1" blue="0.99327762159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cB9-UX-F5z" userLabel="First Responder" sceneMemberID="firstResponder"/>
