--- a/PhotoDrop/PhotoList.storyboard
+++ b/PhotoDrop/PhotoList.storyboard
@@ -61,7 +61,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.53609974540000005" green="1" blue="0.99327762159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <connections>
                         <outlet property="photoListTableView" destination="GiH-tc-UjO" id="e60-dr-syG"/>
