--- a/PhotoDrop/Drop.storyboard
+++ b/PhotoDrop/Drop.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,50 +21,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SAP-oG-9F0">
-                                <rect key="frame" x="0.0" y="53" width="375" height="470"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SAP-oG-9F0">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YJX-pw-A2s">
+                                        <rect key="frame" x="67" y="269" width="240" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Glr-hA-0P6">
+                                        <rect key="frame" x="24" y="23" width="34" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Back"/>
+                                        <connections>
+                                            <action selector="backButtonTapped:" destination="sav-ME-bra" eventType="touchUpInside" id="tHR-1x-aah"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lZv-X8-pl4">
+                                        <rect key="frame" x="142" y="553" width="90" height="90"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Take Photo" image="Circle-clipart-frame">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="takePhotoButtonTapped:" destination="sav-ME-bra" eventType="touchUpInside" id="nIG-SX-RmL"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YJX-pw-A2s">
-                                <rect key="frame" x="67" y="269" width="240" height="128"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Glr-hA-0P6">
-                                <rect key="frame" x="16" y="20" width="34" height="30"/>
-                                <state key="normal" title="Back"/>
-                                <connections>
-                                    <action selector="backButtonTapped:" destination="sav-ME-bra" eventType="touchUpInside" id="tHR-1x-aah"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lZv-X8-pl4">
-                                <rect key="frame" x="144" y="557" width="90" height="90"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="90" id="CHG-n4-PZP"/>
-                                </constraints>
-                                <state key="normal" title="Take Photo" image="Oval 2"/>
-                                <connections>
-                                    <action selector="takePhotoButtonTapped:" destination="sav-ME-bra" eventType="touchUpInside" id="nIG-SX-RmL"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.53609974538419336" green="1" blue="0.99327762160030697" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="SAP-oG-9F0" firstAttribute="leading" secondItem="s2D-MQ-qck" secondAttribute="leading" id="0Yv-uI-Wwb"/>
-                            <constraint firstItem="YJX-pw-A2s" firstAttribute="leading" secondItem="s2D-MQ-qck" secondAttribute="leadingMargin" constant="51" id="1xx-ZV-WbN"/>
-                            <constraint firstItem="SAP-oG-9F0" firstAttribute="centerX" secondItem="YJX-pw-A2s" secondAttribute="centerX" id="6RE-2C-aLo"/>
-                            <constraint firstItem="Glr-hA-0P6" firstAttribute="top" secondItem="oKe-XZ-mhv" secondAttribute="bottom" id="ELo-w9-aEA"/>
-                            <constraint firstItem="Glr-hA-0P6" firstAttribute="leading" secondItem="s2D-MQ-qck" secondAttribute="leadingMargin" id="Ht7-X3-rcf"/>
-                            <constraint firstAttribute="trailing" secondItem="SAP-oG-9F0" secondAttribute="trailing" id="IQo-2M-x93"/>
-                            <constraint firstItem="lZv-X8-pl4" firstAttribute="leading" secondItem="s2D-MQ-qck" secondAttribute="leading" constant="144" id="RJ5-MH-KD3"/>
-                            <constraint firstAttribute="bottom" secondItem="lZv-X8-pl4" secondAttribute="bottom" constant="20" symbolic="YES" id="W3s-Ap-DoM"/>
-                            <constraint firstItem="lZv-X8-pl4" firstAttribute="top" secondItem="SAP-oG-9F0" secondAttribute="bottom" constant="34" id="XAh-C2-XqB"/>
-                            <constraint firstItem="YJX-pw-A2s" firstAttribute="centerY" secondItem="s2D-MQ-qck" secondAttribute="centerY" id="YW8-HF-PCE"/>
-                            <constraint firstItem="SAP-oG-9F0" firstAttribute="top" secondItem="Glr-hA-0P6" secondAttribute="bottom" constant="3" id="ej5-bz-H1W"/>
-                            <constraint firstItem="YJX-pw-A2s" firstAttribute="top" secondItem="oKe-XZ-mhv" secondAttribute="bottom" constant="249" id="lR4-Us-uVX"/>
-                        </constraints>
                     </view>
                     <connections>
                         <outlet property="cameraView" destination="SAP-oG-9F0" id="YZt-Qz-NSd"/>
                         <outlet property="imageView" destination="YJX-pw-A2s" id="o9S-bn-thF"/>
+                        <outlet property="takePhotoButton" destination="lZv-X8-pl4" id="Ult-rt-5J8"/>
                         <segue destination="8FB-P5-UuS" kind="show" identifier="toDropPreview" id="ab3-6t-R55"/>
                     </connections>
                 </viewController>
@@ -83,6 +74,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Oval 2" width="89" height="90"/>
+        <image name="Circle-clipart-frame" width="666" height="666"/>
     </resources>
 </document>
