--- a/PhotoDrop/DropPreview.storyboard
+++ b/PhotoDrop/DropPreview.storyboard
@@ -30,47 +30,14 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ame-RJ-Myd">
-                                <rect key="frame" x="139" y="86" width="97" height="30"/>
+                                <rect key="frame" x="139" y="180" width="97" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="97" id="qLs-Ia-7tY"/>
+                                    <constraint firstAttribute="width" constant="97" id="KlX-B2-YYh"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Field" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hzx-Rb-R5R">
-                                <rect key="frame" x="150" y="57" width="74" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h3y-yo-DR5">
-                                <rect key="frame" x="83" y="214" width="97" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="97" id="xV3-zW-cIb"/>
-                                </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gPK-1o-3fj">
-                                <rect key="frame" x="203" y="214" width="97" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Long" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3YR-b3-Rs9">
-                                <rect key="frame" x="110" y="185" width="39" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kf1-0f-mO9">
-                                <rect key="frame" x="230" y="185" width="25" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jtw-c9-Cqg">
                                 <rect key="frame" x="328" y="20" width="31" height="30"/>
                                 <state key="normal" title="Post"/>
@@ -81,35 +48,30 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C53-sZ-5Ka">
                                 <rect key="frame" x="51" y="282" width="273" height="310"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Picture Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hzx-Rb-R5R">
+                                <rect key="frame" x="141.5" y="151" width="92" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.53609974540000005" green="1" blue="0.99327762159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Hzx-Rb-R5R" firstAttribute="top" secondItem="Lb1-jx-JC0" secondAttribute="bottom" constant="37" id="0jE-27-lHw"/>
-                            <constraint firstItem="C53-sZ-5Ka" firstAttribute="top" secondItem="h3y-yo-DR5" secondAttribute="bottom" constant="38" id="9k4-OU-hrk"/>
-                            <constraint firstItem="Jtw-c9-Cqg" firstAttribute="trailing" secondItem="gZW-fA-gHm" secondAttribute="trailingMargin" id="Ahx-LS-Zfg"/>
-                            <constraint firstItem="Hzx-Rb-R5R" firstAttribute="centerX" secondItem="ame-RJ-Myd" secondAttribute="centerX" id="Clc-EO-4bs"/>
-                            <constraint firstItem="FoO-eI-87W" firstAttribute="baseline" secondItem="Jtw-c9-Cqg" secondAttribute="baseline" id="KV2-qk-S2e"/>
-                            <constraint firstItem="Kf1-0f-mO9" firstAttribute="leading" secondItem="3YR-b3-Rs9" secondAttribute="trailing" constant="81" id="MsU-oT-x3A"/>
-                            <constraint firstItem="gPK-1o-3fj" firstAttribute="leading" secondItem="h3y-yo-DR5" secondAttribute="trailing" constant="23" id="OR1-SN-UG2"/>
-                            <constraint firstItem="h3y-yo-DR5" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leadingMargin" constant="67" id="PDj-NA-HnY"/>
-                            <constraint firstItem="ame-RJ-Myd" firstAttribute="centerX" secondItem="C53-sZ-5Ka" secondAttribute="centerX" id="RdA-BB-oCB"/>
-                            <constraint firstItem="h3y-yo-DR5" firstAttribute="top" secondItem="3YR-b3-Rs9" secondAttribute="bottom" constant="8" symbolic="YES" id="UOv-LD-yQN"/>
-                            <constraint firstItem="Hzx-Rb-R5R" firstAttribute="centerX" secondItem="gZW-fA-gHm" secondAttribute="centerX" id="X0X-TA-Dcx"/>
-                            <constraint firstItem="C53-sZ-5Ka" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leadingMargin" constant="35" id="XGG-EO-drX"/>
-                            <constraint firstItem="3YR-b3-Rs9" firstAttribute="baseline" secondItem="Kf1-0f-mO9" secondAttribute="baseline" id="Z43-mm-2Mh"/>
-                            <constraint firstItem="3YR-b3-Rs9" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leadingMargin" constant="94" id="ads-ln-Qc4"/>
-                            <constraint firstItem="ame-RJ-Myd" firstAttribute="top" secondItem="Hzx-Rb-R5R" secondAttribute="bottom" constant="8" symbolic="YES" id="dq8-G2-LJk"/>
-                            <constraint firstItem="FoO-eI-87W" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leadingMargin" id="dvf-3b-XJE"/>
-                            <constraint firstItem="FoO-eI-87W" firstAttribute="top" secondItem="Lb1-jx-JC0" secondAttribute="bottom" id="g1m-pg-Erg"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="gPK-1o-3fj" secondAttribute="trailing" constant="59" id="hDE-ft-CHu"/>
-                            <constraint firstItem="3YR-b3-Rs9" firstAttribute="top" secondItem="ame-RJ-Myd" secondAttribute="bottom" constant="69" id="vUu-bj-DhW"/>
-                            <constraint firstItem="HJ6-f6-vGB" firstAttribute="top" secondItem="C53-sZ-5Ka" secondAttribute="bottom" constant="75" id="xEc-pe-0Dj"/>
-                            <constraint firstItem="h3y-yo-DR5" firstAttribute="baseline" secondItem="gPK-1o-3fj" secondAttribute="baseline" id="yCp-eo-iKj"/>
+                            <constraint firstItem="FoO-eI-87W" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leadingMargin" id="2Ku-3c-bby"/>
+                            <constraint firstItem="FoO-eI-87W" firstAttribute="top" secondItem="Lb1-jx-JC0" secondAttribute="bottom" id="Msd-4i-uF7"/>
+                            <constraint firstItem="ame-RJ-Myd" firstAttribute="top" secondItem="Hzx-Rb-R5R" secondAttribute="bottom" constant="8" symbolic="YES" id="SNo-nr-1FM"/>
+                            <constraint firstItem="Hzx-Rb-R5R" firstAttribute="top" secondItem="Lb1-jx-JC0" secondAttribute="bottom" constant="131" id="SZS-CA-AZI"/>
+                            <constraint firstItem="C53-sZ-5Ka" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leadingMargin" constant="35" id="UqC-Rc-Oe4"/>
+                            <constraint firstItem="C53-sZ-5Ka" firstAttribute="top" secondItem="ame-RJ-Myd" secondAttribute="bottom" constant="72" id="W0c-84-OZ0"/>
+                            <constraint firstItem="HJ6-f6-vGB" firstAttribute="top" secondItem="C53-sZ-5Ka" secondAttribute="bottom" constant="75" id="g9f-1E-Csm"/>
+                            <constraint firstItem="Jtw-c9-Cqg" firstAttribute="trailing" secondItem="gZW-fA-gHm" secondAttribute="trailingMargin" id="gL6-ur-dkW"/>
+                            <constraint firstItem="Hzx-Rb-R5R" firstAttribute="centerX" secondItem="gZW-fA-gHm" secondAttribute="centerX" id="gZJ-mI-aIU"/>
+                            <constraint firstItem="FoO-eI-87W" firstAttribute="baseline" secondItem="Jtw-c9-Cqg" secondAttribute="baseline" id="hEK-An-JAy"/>
+                            <constraint firstItem="ame-RJ-Myd" firstAttribute="centerX" secondItem="C53-sZ-5Ka" secondAttribute="centerX" id="kYB-8i-Kjk"/>
+                            <constraint firstItem="Hzx-Rb-R5R" firstAttribute="centerX" secondItem="ame-RJ-Myd" secondAttribute="centerX" id="sWY-Pm-DF5"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="latitudeTextField" destination="gPK-1o-3fj" id="srn-1Z-ODc"/>
-                        <outlet property="longitudeTextField" destination="h3y-yo-DR5" id="AiL-hL-kIa"/>
                         <outlet property="previewImage" destination="C53-sZ-5Ka" id="32I-jK-YX5"/>
                         <outlet property="titleTextField" destination="ame-RJ-Myd" id="MF5-0K-w0x"/>
                     </connections>
